# vgac-agenti

./: .env.example  .gitignore  README.md  pyproject.toml
.kiro/: project.md
.kiro/rules/: aws-constraints.md  code-standards.md  testing.md
.kiro/skills/: agent-patterns.md  calibration.md  integration.md  vgac-context.md
src/: __init__.py
src/agents/: __init__.py  actor.py  base.py  calibrator.py  observer.py  predictor.py
tests/: __init__.py  conftest.py  test_calibration.py
